# rss-mounter

./: README.md  main.py  pyproject.toml  rss_config.yaml
libs/: rss.py
